option java_outer_classname = "Staff";
option java_package = ".";

message StaffData {
  required int32  id = 1;
  required string name = 2;
  optional string email = 3;
  repeated string position = 4;
}

message IncomeData {
  required int32 salary = 1;
  required int32 bonus  = 2;
}

service StaffService {
  rpc getIncome(StaffData) returns (IncomeData);
}
